--- a/Views/Categorie/EditCategorie.cshtml
+++ b/Views/Categorie/EditCategorie.cshtml
@@ -14,7 +14,7 @@
 		<input asp-for="DisplayOrder" />
 		<span asp-validation-for="DisplayOrder"></span>
 
-		<button type="submit">Send</button>
+		<button type="submit">Update</button>
 		<a asp-controller="Categorie" asp-action="Index">Cancel</a>
 	</form>
 </div>
